WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213426
WebKit fails to leave audio routing arbitration during navigation, closing.
https://bugs.webkit.org/show_bug.cgi?id=213426
Summary
WebKit fails to leave audio routing arbitration during navigation, closing.
Jer Noble
Reported
2020-06-20 00:26:24 PDT
WebKit fails to leave audio routing arbitration during navigation, closing.
Attachments
Patch
(21.72 KB, patch)
2020-06-20 00:38 PDT
,
Jer Noble
eric.carlson
: review+
Details
Formatted Diff
Diff
Patch for landing
(22.08 KB, patch)
2020-06-20 18:06 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2020-06-20 00:27:37 PDT
<
rdar://problem/64395051
>
Radar WebKit Bug Importer
Comment 2
2020-06-20 00:27:52 PDT
<
rdar://problem/64556258
>
Jer Noble
Comment 3
2020-06-20 00:38:56 PDT
Created
attachment 402378
[details]
Patch
Jer Noble
Comment 4
2020-06-20 00:39:21 PDT
<
rdar://problem/64395051
>
Eric Carlson
Comment 5
2020-06-20 14:41:13 PDT
Comment on
attachment 402378
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=402378&action=review
Is it worth adding a test that deletes the <video> element?
> Source/WebKit/UIProcess/API/Cocoa/WKWebViewTesting.mm:245 > + case WebKit::AudioSessionRoutingArbitratorProxy::ArbitrationStatus::None:return WKWebViewAudioRoutingArbitrationStatusNone;
Nit: missing a space before "return"
Jer Noble
Comment 6
2020-06-20 18:02:50 PDT
(In reply to Eric Carlson from
comment #5
)
> Comment on
attachment 402378
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=402378&action=review
> > Is it worth adding a test that deletes the <video> element?
Might as well!
> > Source/WebKit/UIProcess/API/Cocoa/WKWebViewTesting.mm:245 > > + case WebKit::AudioSessionRoutingArbitratorProxy::ArbitrationStatus::None:return WKWebViewAudioRoutingArbitrationStatusNone; > > Nit: missing a space before "return"
Fixed.
Jer Noble
Comment 7
2020-06-20 18:06:59 PDT
Created
attachment 402412
[details]
Patch for landing
EWS
Comment 8
2020-06-21 08:34:18 PDT
Committed
r263328
: <
https://trac.webkit.org/changeset/263328
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 402412
[details]
.
Antoine Quint
Comment 9
2020-06-22 00:19:05 PDT
Committed
r263342
: <
https://trac.webkit.org/changeset/263342
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug