WebKit fails to leave audio routing arbitration during navigation, closing. https://bugs.webkit.org/show_bug.cgi?id=213426 <rdar://problem/64395051>

Unreviewed build fix for an unannotated switch fall-through between switch labels.

* UIProcess/API/Cocoa/WKWebViewTesting.mm:
(-[WKWebView _audioRoutingArbitrationStatus]):

Canonical link: https://commits.webkit.org/226248@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263342 268f45cc-cd09-0410-ab3c-d52691b4dbfc