Source/WebKit/UIProcess/API/Cocoa/WKWebViewTesting.mm
@@ -241,10 +241,10 @@
 {
 #if ENABLE(ROUTING_ARBITRATION)
     switch (_page->process().audioSessionRoutingArbitrator().arbitrationStatus()) {
-    default: ASSERT_NOT_REACHED();
     case WebKit::AudioSessionRoutingArbitratorProxy::ArbitrationStatus::None: return WKWebViewAudioRoutingArbitrationStatusNone;
     case WebKit::AudioSessionRoutingArbitratorProxy::ArbitrationStatus::Pending: return WKWebViewAudioRoutingArbitrationStatusPending;
     case WebKit::AudioSessionRoutingArbitratorProxy::ArbitrationStatus::Active: return WKWebViewAudioRoutingArbitrationStatusActive;
+    default: ASSERT_NOT_REACHED();
     }
 #else
     return WKWebViewAudioRoutingArbitrationStatusNone;
